Einiges zu tun.

--- a/document.tex
+++ b/document.tex
@@ -43,9 +43,13 @@ oneside, % oneside / twoside
 \newcommand{\nicecaption}[2]{\caption[#1]{\small{\textbf{#1}\\#2}}}
 
 
-%\includeonly{conclusion}
+\includeonly{conclusion}
 
 \begin{document}
+% abstract english
+\include{abstract}
+%	
+%	
 % chapter introduction
 \include{introduction}
 %
