--- a/introduction.tex
+++ b/introduction.tex
@@ -4,7 +4,7 @@ Focal adhesions (FA) are macromolecular protein complexes which act as a connect
 FAK consists of four domains: (i) a FERM (4.1 protein, ezrin, radixin and moesin) domain at the N-terminus, (ii) a tyrosine kinase, (iii) a proline-rich region and (iv) a focal adhesion targeting (FAT) domain at the C-terminus (\autoref{intro:fak}).\\
 FERM is a common protein domain which links proteins to membranes by binding to various phospholipids \autocite{fermdomain} and consists of three subdomains: F1, F2 and F3. In the F2 subdomain, a basic patch ($^{216}$KAKTLRK$^{222}$) can be found, which is a prominent binding site for phosphatidylinositol-4,5-bisphosphate (\pip).\\
 The kinase consists of a C-lobe, an activation loop and an N-lobe. Catalytic activity of the kinase is mainly regulated by the phosphorylation of \acid{Y}{576}{} and \acid{Y}{577}, which are located in the activation loop \autocite{tyrosinePhosphor}. The kinase also provides binding sites for \pip{}. One is located next to the basic patch of the FERM domain, but others (namely \acid{R}{508}, \acid{R}{514}, \acid{K}{515}, \acid{K}{621} and \acid{K}{627}) can be found on the side of the kinase \autocites{pap002}{pap002Exp}.\\
-The FERM domain and the kinase are connected by a linker region. In contrast to other kinase domains, the main autophosphorylation site of FAK, \acid{Y}{397}, can be found in this region and not in the kinase itself \autocite{pap001}.\\ %TODO: better cite
+The FERM domain and the kinase are connected by a linker region. In contrast to other kinase domains, the main autophosphorylation site of FAK, \acid{Y}{397}, can be found in this region and not in the kinase itself \autocite{pap001}.\\
 The FAT domain is linked to the kinase by a flexible proline-rich region. FAT links to FAs by interacting with talin and paxillin which are integrin-associated proteins \autocite{fatdomain}.
 %
 %
@@ -19,7 +19,7 @@ The FAT domain is linked to the kinase by a flexible proline-rich region. FAT li
 %
 %
 \section{\pip{} binding and activation}
-It is known that FAK triggers several stimuli with a downstream effect on e.g. cell migration \autocite{cellMigration}. However, the focus in this thesis is on the interactions with \pip{}. Therefore, only the different binding sites of FAK for \pip{} and their impacts on FAK activation are discussed in the following.\\
+It is known that integrin signalling due to cell adhesion triggers activation of FAK and that \pip{} is an important mediator in this signalling pathway. FAK interacts in several ways with \pip{}, which  are discussed in the following.\\
 \\
 In the autoinhibited conformation, the FERM domain shields the active site of the kinase. An activation of FAK therefore requires the dissociation of the FERM and the kinase \autocite{structFAK}.\\
 \pip{} is a phospholipid which is locally generated in FAs due to integrin signalling \autocite{pip2LocalGeneration}. Its charge depends strongly on the pH, but at physological conditions a net charge of -4 is the preferred state. However, in presence of basic amino acids (Arg, Lys), the deprotonated state gets promoted, resulting in a net charge of -5 \autocite{pip2_minus5}. The electrostatic binding of \pip{} to the basic patch in the F2 subdomain results in allosteric changes, which also influence the interface between the F1 subdomain and the N-lobe. Moreover, the linker region gets less strongly bound, which promotes autophosphorylation of \acid{Y}{397}. However, the \pip{} binding alone has no effect on the catalytic activity, which suggests that the FERM domain is still associated to the kinase \autocites{pap001}{pap003}. For activation, an additional stimulus, either biochemical or mechanical, is needed.\\
@@ -33,8 +33,7 @@ The binding sites on the side of the kinase were identified by computer simulati
 \label{intro:clustering}
 Autophosphorylation of \acid{Y}{397} is an important event in FAK activation. It has been shown that this happens in intact cells \textit{in trans}, for which a self-association of FAK is required \autocite{transAuto}.\\
 \\
-The FERM domain induces a dimerization of FAK, as it does in other proteins containing a FERM domain as well. % TODO: in vivo, in vitro?
-The interaction emerges around \acid{W}{266} in the connected FERM domains and is stabilised by an interaction of the FAT domain with the basic patch of the other FERM domain, respectively. The presence of \acid{W}{266} is also required for autophosphorylation of FAK.\\
+The FERM domain induces a dimerization of FAK by interacting with the FERM domain of a neighbouring FAK molecule. The interaction emerges around \acid{W}{266} in the connected FERM domains and is stabilised by an interaction of the FAT domain with the basic patch of the other FERM domain, respectively. The presence of \acid{W}{266} is also required for autophosphorylation of FAK.\\
 \pip{} is not needed for the dimerization of the FERM domains. However, an enriched FAK concentration is needed to observe FAK dimers in cells, which is the case at FAs. It is still unclear how the dimer is stabilised at membranes, where the basic patch is also required for ligand binding \autocite{fakdimers}.\\
 It has been shown that \textit{in trans} autophosphorylation of FAK is promoted by dimerization \autocite{dimersVsClusters}.\\
 \\
