--- a/methods/md.tex
+++ b/methods/md.tex
@@ -121,5 +121,4 @@ Often, groups are coupled to independent thermostats. This is helpful because th
 \subsubsection{Barostats}
 In biological systems, often not the volume but the pressure is constant, which can be achieved in MD with a barostat. For equilibration runs, the Berendsen barostat \autocite{berendsen} was used, which couples the system, analogously to the BT, to an external pressure by rescaling the positions of the particles \autocite[p. 36]{gromacsManual}. For production runs, the Parinello-Rahman barostat \autocites{parinelloBarostat}{parinelloBarostat2} was used, because it samples the phase space more accurately. This barostat allows also a rotation of the position vectors. The appropriate matrix follows a differential equation depending on the current deviation of the pressure from the external pressure. However, large deviations lead to oscillations in the box \autocite[p. 36]{gromacsManual}.\\
 \\
-\gromacs{} provides the possibility to couple the z-direction independently from the x- and y-direction, which is called semiisotropic pressure coupling. This feature is useful for membrane and pulling simulations, because the dynamics differ a lot between these axes.
-% TODO: cite
+\gromacs{} provides the possibility to couple the z-direction independently from the x- and y-direction, which is called semiisotropic pressure coupling. This feature is useful for membrane and pulling simulations, because the dynamics differ a lot between these axes \autocite[p. 36]{gromacsManual}.
