--- a/results.tex
+++ b/results.tex
@@ -1,5 +1,6 @@
 \chapter{Results}
 In this chapter, we present our results from the simulations. First of all FAK in solution is considered. Afterwards the focus is on the effect of \pip{}. We will start this section with the free energy profile of the basic patch. Since the simulations containing a membrane were carried out with a stabilizing force, we will examine the impact of the force on the observables, before we investigate the conformational changes of FAK induced by binding to the membrane. At the end the results obtained for multiple FAK molecules are presented.
+% TODO: linking to the sections.
 %
 %
 \section{FAK in solution}
@@ -12,7 +13,7 @@ In this chapter, we present our results from the simulations. First of all FAK i
 \clearpage
 %
 %
-\section{Impact of stabilising force}
+\section{Impact of the stabilising force}
 \input{results/forceAnalysis}
 \clearpage
 %
