--- a/results/membrane.tex
+++ b/results/membrane.tex
@@ -1,11 +1,13 @@
-In this section, the conformation of FAK bound to a \pip{} containing membrane (FAK-MEM) is compared to the observations of FAK-SOL. To this end, FAK structures of setup 4 were used with the condition that the FAK molecules have no neighbours. The contact map is based on the same dataset which was used for \autoref{force:contactmap}.\\
+In this section, the conformation of FAK bound to a \pip{}-containing membrane (FAK-MEM) is compared to the observations of FAK-SOL. To this end, FAK structures of setup 4 were used with the condition that the FAK molecules have no neighbours. The contact map is based on the same dataset which was used for \autoref{force:contactmap}.\\
 \\
-The distribution of $d_\text{F2-C}$ shown in \autoref{mem:comdist} lacks the peak observed for FAK-SOL at $3.8\,\si{\nano\metre}$ which has been associated with spot 1. Also the distribution of $d_\text{F1-N}$ shows a distinct peak at values associated to spot 2 observed in FAK-SOL ($4.0\,\si{\nano\metre}$). This induces that the tilting of the kinase domain is suppressed in presence of the membrane which is reasonable since both, FERM domain and kinase have a docking site for \pip{}. However, there is a significant increase in the contact area (\autoref{mem:contactarea}) to $30.8\,\si{\nano\metre}^2$. Therefore, we analysed the FERM-kinase interface in order to get a more detailed insight in the conformational change.\\
+% TODO: link figure for FAK-SOL, CA increase: in percentage
+The distribution of $d_\text{F2-C}$ shown in \autoref{mem:comdist} lacks the peak observed for FAK-SOL at $3.8\,\si{\nano\metre}$ which has been associated with spot 1. Moreover, the distribution of $d_\text{F1-N}$ shows a distinct peak at values associated to spot 2 observed in FAK-SOL ($4.0\,\si{\nano\metre}$). This implies that the tilting of the kinase domain is suppressed in presence of the membrane, which is reasonable since both, FERM domain and kinase, have a docking site for \pip{}. However, there is a significant increase in the contact area (\autoref{mem:contactarea}) to $30.8\,\si{\nano\metre}^2$. Therefore, we analysed the FERM-kinase interface in order to get a more detailed insight into this conformational change.\\
 \\
-The contact map in \autoref{mem:contact} shows the difference to the contact map obtained for FAK-SOL. At the interface of F2 and the C-lobe (area 1) the residue distances get closer. In area 2 both, increasing and decreasing distances can be found. Regarding the 3D structure (\autoref{mem:3d}) one can see that although the upper part of the interface (contacts between \acid{P}{49} to \acid{S}{54} and the kinase) gets closer, the region below (contacts between \acid{E}{44} to \acid{E}{48} and the kinase) gets farther away. This induces a spreading of the interface at the activation loop including the activity regulating residues \acid{Y}{576} and \acid{Y}{577}.\\
-Also in the linker region conformational changes can be observed. Area 3 indicates that the ball structure of the \acid{Y}{397} containing ball structure observed in FAK-SOL disappears. As shown in \autoref{mem:3d} the linker is pulled back to the FERM domain which results in an exposed position of the autophosphorylation site \acid{Y}{397}.\\
+% TODO: the difference contact map
+The contact map in \autoref{mem:contact} shows the difference to the contact map obtained for FAK-SOL. At the interface of F2 and the C-lobe (area 1), the residue pairs get closer. In area 2, both increases and decreases in distances can be found. Regarding the 3D structure (\autoref{mem:3d}), one can see that although the upper part of the interface (contacts between \acid{P}{49} to \acid{S}{54} and the kinase) gets closer, the region below (contacts between \acid{E}{44} to \acid{E}{48} and the kinase) gets farther away. This induces a spreading of the interface at the activation loop, including the activity-regulating residues \acid{Y}{576} and \acid{Y}{577}.\\
+Also in the linker region, conformational changes can be observed. Area 3 indicates that the \acid{Y}{397}-containing ball structure observed in FAK-SOL disappears. As shown in \autoref{mem:3d}, the linker is pulled back to the FERM domain, which results in an exposed position of the autophosphorylation site \acid{Y}{397}.\\
 \\
-As suggested by findings of \textcite{pap001} and \textcite{pap003} the FERM domain does not dissociate from the kinase because of binding to \pip{}. However this binding leads to conformational changes resulting in a partial opening of the FERM kinase interface and the exposure of the autophosphorylation site \acid{Y}{397}.
+As suggested by findings of \textcite{pap001} and \textcite{pap003}, the FERM domain does not dissociate from the kinase because of binding to \pip{}. However, this binding leads to conformational changes resulting in a partial opening of the FERM-kinase interface and the exposure of the autophosphorylation site \acid{Y}{397}.
 %
 %
 %
@@ -36,10 +38,11 @@ As suggested by findings of \textcite{pap001} and \textcite{pap003} the FERM dom
 %
 %
 %
+% TODO: 3D structure as 2D
 \begin{figure}
 	\centering
 	\includegraphics[height=4cm]{figures/results/fak_mem}
-	\nicecaption{3D structure of FAK-MEM}{The 3D structure shows the FERM domain (blue), the kinase (red) and the linker (black, transparent). The molecule is located on the membrane (grey). The autophosphorylation site \acid{Y}{397} (green) is exposed. Residues around \acid{S}{47} (magenta) gets farther away from the kinase while residues around \acid{W}{52} (yellow) gets closer.}
+	\nicecaption{3D structure of FAK-MEM}{The 3D structure shows the FERM domain (blue), the kinase (red) and the linker (black, transparent). The molecule is located on the membrane (grey). The autophosphorylation site \acid{Y}{397} (green) is exposed. Residues around \acid{S}{47} (magenta) get farther away from the kinase, while residues around \acid{W}{52} (yellow) get closer.}
 	\label{mem:3d}
 \end{figure}
 %
