--- a/setup.tex
+++ b/setup.tex
@@ -47,7 +47,7 @@ Five independent copies were simulated for $10\,\si{\micro\second}$ each. The te
 \begin{figure}[h]
 	\centering
 	\includegraphics[height=6cm]{figures/setup/setup_gen}
-	\nicecaption{Setup 3 - FAK on a \pip{} membrane}{The setup involves one FAK molecule (FERM blue, kinase red and linker black, 1486 beads) on top of a \pip{} containing membrane (XXX \pope{} lipids, XXX \pip{} lipids, XXX beads). The surrounding solution consists of XXX solvent beads and XXX ions. The box dimensions are XXX.}
+	\nicecaption{Setup 3 - FAK on a \pip{} membrane}{The setup involves one FAK molecule (FERM blue, kinase red and linker black, 1486 beads) on top of a \pip{} containing membrane (667 \pope{} lipids, 54 \pip{} lipids, 21918 membrane beads). The surrounding solution consists of ca. 21400 solvent beads and 473 ions. The box dimensions are $15.2\,\si{\nano\metre}$ x $15.2\,\si{\nano\metre}$ x $17.0\,\si{\nano\metre}$.}
 	\label{setup:setup3_pic}
 \end{figure}
 %
@@ -61,7 +61,7 @@ From each copy in setup 3, we cut out five frames. All these 25 frames were arra
 \begin{figure}[h]
 	\centering
 	\includegraphics[height=6cm]{figures/setup/setup_cluster}
-	\nicecaption{Setup 4 - FAK cluster}{The setup is a combination of 25 frames from \autoref{setup:setup3}. There are XXX beads in total, the box dimensions are XXX. The spaces between the frames were needed during setup but disappears during the equilibration.}
+	\nicecaption{Setup 4 - FAK cluster}{The setup is a combination of 25 frames from \autoref{setup:setup3}. It consists of ca. 807000 beads in a box of size $80.0\,\si{\nano\metre}$ x $80.0\,\si{\nano\metre}$ x $17.0\,\si{\nano\metre}$. The spaces between the frames were needed during setup to avoid an overlapping of the beads but disappears during the equilibration.}
 	\label{setup:setup4_pic}
 \end{figure}
 %
