--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,12 +1,25 @@
 \chapter{Conclusion}
-The aim of the present work was to gain insights into conformational changes of FAK due to membrane binding and multiple FAK interactions using MD.
+The aim of the present work was to gain insight into conformational changes of FAK due to \pip{} binding and interactions between multiple FAK molecules. To this end, we used coarse-grained MD simulations with the \martini{} force field.\\
 \\
-In order to avoid falling of FAK on the membrane we introduced a stabilizing force. Although, we showed in \autoref{forceana} that this approach doesn't influence the observables used in the remaining part, it has limitations. Therefore, the cause of the falling is still an important question and should be addressed in further studies e.g. with force distribution analysis methods. Also alternatives to our approach, such as flat-bottom potentials or cylindrical pulling \autocite[p. 156-158]{gromacsManual}, can be considered.\\
+Previous work in the group revealed unnatural behaviour of FAK bound to a \pip{}-containing membrane in \martini{} simulations, namely a falling sidewards. We were able to proof that it is not induced by an underestimation of \pip{} binding at the basic patch. Indeed, \martini{} was able to reproduce the free energy profile of this binding obtained from a reference simulation in \charmm{} remarkably. However, the cause of the falling is still an outstanding question and should be addressed in further studies.\\ % FDA?
 \\
-From the configurations of FAK in solution we identified important residues contributing to the FERM-kinase interface. The observations fit well with experimental studies of \textcite{structFAK}. Also the burying of the active site of the kinase as well as the hiding of the autophosphorylation site was observed in these simulations.\\
-We recognized configurational changes of FAK when it binds to a \pip{} containing membrane, namely a partial opening and the promotion of the autophosphorylation site; the domains stays associated. These changes are consistent with previous studies on the influence of \pip{} binding to FAK by \textcite{pap001} and \textcite{pap003}. Also the free energy profile of the \pip{} binding site in the FERM domain, which we obtained from \martini{} simulations, samples the equivalent profile from \charmm{} simulations in the range of the statistical error.\\
-Albeit \martini{} is a coarse graining force field, even atomistic details were reproduced in this thesis, which shows the power of \martini{} and confirms it as a suitable tool regarding FAK simulations.\\
+In this project we introduced a workaround, namely a stabilising force acting on the FERM domain of the FAK molecules. In \autoref{forceana}, we showed that this approach doesn't influence the observables used in the remaining part, but we are aware if its limitations (discussed in \autoref{forceana}) and still investigate possible alternatives, for example flat-bottom potentials or cylindrical pulling \autocite[p. 156-158]{gromacsManual}.\\
 \\
-In \autoref{multiProt} we investigated the interactions between multiple FAK molecules on a membrane. First, we examined FERM-FERM dimers and were able to reproduce important characteristics from experimental observations. This indicates that \martini{} is also suitable for the investigation of protein-protein interactions. Afterwards we considered larger clusters. Although size and shape of the clusters differ a lot, we interpreted our observations as a tendency to a chain like arrangement of the FAK molecules along their long axis and tried to estimate the impacts of such arrangements on the configurations of the involved FAK molecules. Our results show only a small impact on the quantities associated with FAK activation. Therefore we can not draw the conclusion, that these arrangements could promote activation of FAK in larger clusters.\\
+From the configurations obtained for FAK in solution, we identified important residues contributing to the FERM-kinase interface. The observations fit well with experimental studies of \textcite{structFAK}. Also the burying of the active site of the kinase as well as the hiding of the autophosphorylation site was observed in the simulations.\\
+We compared these results to conformations obtained in FAK molecules bound to a \pip{}-containing membrane and identified configurational changes. They involve not only the promotion of the autophosphorylation site, but also a partial opening of the FERM-kinase interface. These changes are consistent with previous studies on allosteric effects of \pip{} binding to FAK by \textcite{pap001} and \textcite{pap003}.\\
 \\
+In \autoref{multiProt} we investigated the interactions between multiple FAK molecules on a membrane. We were able to confirm the importance of \acid{W}{266} in FERM-FERM dimerization proposed by \textcite{fakdimers}. However, our observations imply that FERM-kinase dimers form more often than FERM-FERM dimers.\\
+Regarding more than two FAK molecules, we observed a tendency to aggregate in chain-like structures. These structures were investigated on activation-promoting features, like increased domain distances or a smaller contact area, but no significant differences have been observed.\\
+\\
+Because FERM-kinase dimers were observed the most, a further investigation on this interaction, including the identification of key residues and preferred binding poses, might contribute to the understanding of FAK clustering processes. In addition, the impact of the \pip{} concentration on FAK clustering should be addressed, since \pip{} concentration is linked to integrin signalling.
+
+
+
+
+
+A further investigation of FAK dimers, especially FERM-kinase dimers, might 
+Further studies
+
+% TODO: changing pip2 concentration, alternatives to force, dimer interface in more detail
+% TODO: classify instead of cluster, key residues, preferred poses.
 Currently we try to cluster the obtained configurations with more general approaches in order to reveal the parameters inducing configurational changes in multiple FAK interactions. However, arrangement of large molecules such as FAK is a time consuming process, which has not come to an end in our simulations. Longer simulation times could therefore give new insights into the consequences of FAK clustering. 
