--- a/methods/contactanalysis.tex
+++ b/methods/contactanalysis.tex
@@ -1,6 +1,6 @@
 In the following part the quantities and tools used for contact analysis are briefly introduced.\\
 \\
-Intramolecular distances have been analysed with \conan{}. This analysis tool measures inter-residue distances and performs statistical analysis on them. \conan{} is still under development and not published yet.\\% TODO: cite Csaba?
+Intramolecular distances have been analysed with \conan{}. This analysis tool measures inter-residue distances and performs statistical analysis on them. \conan{} is still under development and not published yet.\\
 The contact area of the FERM-kinase interface can be determined with the solvent accessible surface area (SASA) \autocite{sasaAlg} of the domains involved:
 \begin{equation}
 \text{CA} = \frac{1}{2} \left(\text{SASA}_\text{FERM} + \text{SASA}_\text{kinase} - \text{SASA}_\text{FERM-kinase}\right).
